# FlappyBirds

./: .gitignore  Cargo.toml  README.md
Columns/: Cargo.toml
Columns/src/: gate.rs  lib.rs
Structs/: Cargo.toml
Structs/src/: frame.rs  lib.rs  size.rs  vec2d.rs
src/: main.rs
src/Birds/: Cargo.toml
src/Columns/: Cargo.toml
src/Columns/src/: lib.rs
src/Net/: Cargo.toml
src/Structs/src/: lib.rs
