[package]
name = "columns"
version = "0.1.0"
authors = ["Ficus <pogasiid@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
structs = { path = "../Structs" }
rand = "0.8.3"

#structs = { git = "https://github.com/Pohasii/FlappyBirds/tree/main/src/Structs" }

